--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CloudData - Site em Manutenção</title>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/ico-clouddata-02.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/ico-clouddata-02.ico">
+    
     <style>
         * {
             margin: 0;
