--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CloudData - Site em Manutenção</title>
     
+    <!-- Meta tags de segurança -->
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="X-Frame-Options" content="DENY">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+    
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/ico-clouddata-02.ico">
     <link rel="shortcut icon" type="image/x-icon" href="/ico-clouddata-02.ico">
