Resolve soft 404 com dados estruturados e sitemap

--- a/index.html
+++ b/index.html
@@ -18,6 +18,36 @@
     <link rel="icon" type="image/x-icon" href="/ico-clouddata-02.ico">
     <link rel="shortcut icon" type="image/x-icon" href="/ico-clouddata-02.ico">
     
+    <!-- Schema.org JSON-LD para dados estruturados -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "CloudData",
+        "description": "Empresa de Tecnologia da Informação especializada em soluções Microsoft Azure, Microsoft 365 e Cloud Computing",
+        "url": "https://www.clouddata.com.vc",
+        "logo": "https://www.clouddata.com.vc/18 1.png",
+        "foundingDate": "2011",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Rua Dr. Eduardo Souza Aranha, 153 Sala 4",
+            "addressLocality": "São Paulo",
+            "addressRegion": "SP",
+            "addressCountry": "BR"
+        },
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+55-11-4805-4490",
+            "contactType": "customer service",
+            "email": "suporte@clouddata.com.vc",
+            "availableLanguage": ["Portuguese", "English"]
+        },
+        "sameAs": [
+            "https://www.linkedin.com/company/clouddatacomvc"
+        ]
+    }
+    </script>
+    
     <style>
         * {
             margin: 0;
