Remove links clicáveis de e-mail e telefones

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
             "@type": "ContactPoint",
             "telephone": "+55-11-4805-4490",
             "contactType": "customer service",
-            "email": "suporte@clouddata.com.vc",
             "availableLanguage": ["Portuguese", "English"]
         },
         "sameAs": [
@@ -173,16 +172,9 @@
             font-size: 1em;
         }
 
-        .contact-email {
-            color: #0066cc;
+        .contact-info {
+            color: #333;
             font-weight: 600;
-            text-decoration: none;
-            transition: all 0.3s ease;
-        }
-
-        .contact-email:hover {
-            color: #0052a3;
-            text-decoration: underline;
         }
 
         .phone-numbers {
@@ -191,14 +183,8 @@
             font-size: 0.95em;
         }
 
-        .phone-numbers a {
-            color: #0066cc;
-            text-decoration: none;
+        .phone-numbers span {
             font-weight: 600;
-        }
-
-        .phone-numbers a:hover {
-            text-decoration: underline;
         }
 
         .status-indicator {
@@ -293,10 +279,10 @@
         <div class="info-box">
             <p>
                 <strong>Precisa de suporte urgente?</strong><br><br>
-                📧 E-mail: <a href="mailto:suporte@clouddata.com.vc" class="contact-email">suporte@clouddata.com.vc</a>
+                📧 E-mail: <span class="contact-info">suporte@clouddata.com.vc</span>
             </p>
             <div class="phone-numbers">
-                📞 Telefones: <a href="tel:+551148054490">(11) 4805-4490</a> / <a href="tel:+551139958370">(11) 3995-8370</a>
+                📞 Telefones: <span>(11) 4805-4490</span> / <span>(11) 3995-8370</span>
             </div>
         </div>
         
